tests/parse_print/autogen/562~1436556139_51/stderr.expected
Error:
    Parser error in file: tests/parse_print/autogen/562~1436556139_51/spec.essence Error is:
ValidatorError tests/parse_print/autogen/562~1436556139_51/spec.essence:10:11:
   |
10 |           partition({5}, {2, 2, 2, 4}, {2, 3, 2, 5}, {3}) -
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Type error:
	Expected:"Number / set/ mset / relation / function"
	Got: partition from int

tests/parse_print/autogen/562~1436556139_51/spec.essence:11:11:
   |
11 |           partition({5, 2, 5, 4}, {1, 2, 0, 1, 3}, {3, 5, 1, 4, 3})),
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Type error:
	Expected:"Number / set/ mset / relation / function"
	Got: partition from int
